option('enable_tests',            type : 'boolean', value : false)
option('enable_extras',           type : 'boolean', value : false)
option('enable_profiling',        type : 'boolean', value : false)
option('enable_renderdoc',        type : 'boolean', value : true)
option('enable_descriptor_qa',    type : 'boolean', value : true)
option('enable_trace',            type : 'combo',   value : 'true', choices : ['false', 'true', 'auto'])
